<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddMeetingActivity">

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="710dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/meeting_return_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="#D81B60" />

        <ImageButton
            android:id="@+id/meeting_color"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#19C120"/>

        <Spinner
            android:id="@+id/meeting_room"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/meeting_topic"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="Sujet"
            android:inputType="text"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/meeting_date"
                android:layout_width="306dp"
                android:layout_height="50dp"
                android:hint="jj/mm/aaaa"
                android:inputType="date" />

            <Button
                android:id="@+id/date_btn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:backgroundTint="#19C120"
                android:drawableBottom="@drawable/ic_baseline_ads_click_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/meeting_start_time"
                android:layout_width="127dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="Heure (début)"
                android:inputType="time"
                android:textSize="18sp" />

            <Button
                android:id="@+id/start_time_btn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:backgroundTint="#19C120"
                android:drawableBottom="@drawable/ic_baseline_ads_click_24" />

            <EditText
                android:id="@+id/meeting_end_time"
                android:layout_width="128dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="Heure (fin)"
                android:inputType="time"
                android:textSize="18sp" />

            <Button
                android:id="@+id/end_time_btn"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:backgroundTint="#19C120"
                android:drawableBottom="@drawable/ic_baseline_ads_click_24" />
        </LinearLayout>

        <EditText
            android:id="@+id/meeting_guests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:hint="Participants (e-mails)"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />

        <Button
            android:id="@+id/meeting_add_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#19C120"
            android:enabled="true"
            android:hint="Ajouter la réunion"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>